List of changes from version 2.6.1 to 2.7 (until March 4th, 2013)
     - support for prokaryotic genomes (overlapping genes, arbitrary sets of start codons)
       --genemodel=bacterium still preliminary
     - new species chicken, xenoturbella, heliconius_melpomene1, cacao (Don Gilbert)
     - improved species tribolium2012
     - speedup of bam2hints, filterBam (by a very large factor in cases of large headers)
     - no in-frame codon-split stop codons anymore with option --mea=1
     - new script for converting CEGMA gff output format to a gff format
     - database access as alternative to flat file input for comparative gene finding
     - bugfixes (--noprediction, bam2hints, .gb input with Windows line breaks, tetrahymena,
                 optimize_augustus)
List of changes from version 2.6 to 2.6.1 (until June 9th, 2012)
     - make the sources compatible with older compilers that do not understand the flag -std=c++0x
     - script samMap.pl
     - filterBam bugfixes
     - customized transition matrix for species chlamy2011
List of changes from version 2.5.5 to 2.6 (until April 12th, 2012)
     - new species bombus_terrestris, rhodnius, Conidiobolus_coronatus
     - new auxiliary programs filterBam, bam2hints
     - update to species tomato
     - option --mea=1 to maximize expected accuracy instead of using Viterbi algorithm
     - new option --contentmodels=off that neutralizes all models except signal models
       (to analyse SNP influence on gene structure)
     - new parameter --min_intron_len for species with shorter introns than the default 39bp
     - added scripts wigchoose.pl, filterShrimp.pl
     - updated RNA-Seq documentation readme.rnaseq.html
     - bugfixes (in augustus, autoAugPred.pl, maskNregions.pl, optimize_augustus.pl, filterPSL.pl,
       intron2exex.pl
List of changes from version 2.5 to 2.5.5 (until March 2nd, 2011)
     - added a tutorial
     - bugfixes, in particular one that caused a crash on Mac OS