@@ -22,7 +22,7 @@ release:
 	rm -f src/makedepend.pl
 	cd auxprogs/filterBam/; make clean all; cd -
 	cd auxprogs/bam2hints; make clean; make ; cd -
-	cd config/species; rm -rf tobacco xeno1 bombus_terrestris{1,3}
+	cd config/species; rm -rf tobacco xeno1 bombus_terrestris{1,3} symsag xenoturbella meara pavar newest
 	tar -czf ../augustus.2.7.tar.gz .
 
 # remove -static from src/Makefile for MAC users
